--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ httpstatus = "0.1"
 itertools = "0.13"
 once_cell = "1"
 percent-encoding = "2"
-reqwest = {version = "0.12.5", features = ["json" ,"blocking"] }
+reqwest = {version = "0.12.5", default-features = false, features = ["json" ,"blocking", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_urlencoded = "0.7"
